--- a/DanyTranferNow/app/src/main/res/layout/fragment_login.xml
+++ b/DanyTranferNow/app/src/main/res/layout/fragment_login.xml
@@ -66,6 +66,8 @@
         app:hintTextColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/textview_first"
         app:startIconTint="@color/black"
+        app:errorEnabled="true"
+        app:errorTextColor="@android:color/holo_red_light"
         tools:layout_editor_absoluteX="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -73,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
+            android:text="test"
             android:textColor="@color/black"
             android:textCursorDrawable="@null" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -84,6 +87,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="Password"
+        app:errorEnabled="true"
+        app:errorTextColor="@android:color/holo_red_light"
         android:textColorHint="@color/black"
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidthFocused="2dp"
@@ -99,6 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
+            android:text="asdasd"
             android:textColor="@color/black"
             android:textCursorDrawable="@null" />
     </com.google.android.material.textfield.TextInputLayout>
